// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalSectionRenderer snapshot (T-0006-129) — productive×focus matches snapshot (whenNotEmpty, populated collection) 1`] = `
<View>
  <Text
    accessibilityLabel="Visible child"
    accessibilityRole="header"
    aria-level={2}
    style={
      {
        "color": "#14171A",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": -0.2,
        "lineHeight": 30,
        "textAlign": "left",
      }
    }
  >
    Visible child
  </Text>
</View>
`;

exports[`ConditionalSectionRenderer snapshot (T-0006-130) — expressive×health matches snapshot (whenEmpty, empty collection) 1`] = `
<View>
  <Text
    accessibilityLabel="Visible child"
    accessibilityRole="header"
    aria-level={2}
    style={
      {
        "color": "#1A1715",
        "fontSize": 28,
        "fontWeight": "500",
        "letterSpacing": -0.3,
        "lineHeight": 36,
        "textAlign": "left",
      }
    }
  >
    Visible child
  </Text>
</View>
`;
